/*
 * $Id: ChangeLog,v 1.807 2003/03/07 05:32:37 ronpinkas Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2003-03-06 22:07 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/vm/hvm.c
    + Added default branch with hb_inkeyPut( ch ) to keyboard input logic in hb_vmExecute() to avoide intermitent loss of input.

2003-03-06 21:33 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * make_b32.bat
    + Added reset of HB_MT

  * source/rtl/tbrowse.prg
    + Added missing RETURN Value.

  * source/vm/classes.c
    * Minor correction to recent fix to SCOPE logic.

  * source/vm/codebloc.c
  * source/vm/hvm.c
    % Optimization of recent fix to ProcName() and ProcLine() of Codeblocks.

  * source/vm/proc.c
    * Removed commented code.

2003-03-07 01:30 UTC-0300 Walter Negro <anegro@overnet.com.ar>
  * source/rtl/tbrowse.prg
    ! Fix new bug in initialization and more Clipper compatibility.

2003-03-06 19:05 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * include/hbvmpub.h
    - Removed lineno member from struct hb_struBlcok.
    + Added procname, and lineno members to struct _HB_CODEBLOCK.

  * source/vm/hvm.c
    + Added logic to set asBlock.value->procname, and asBlock.value->lineno in hb_vmPush*Block*()

  * source/vm/codebloc.c
    + Added logic to release asBlock.value->procname.

  * source/vm/proc.c
    ! Fixed ProcName() and ProcLine() handling of Codeblocks to be Clipper compatible.

  * source/vm/classes.c
    + Added logic to hb_clsValidScope() to consider Block Creation SCOPE.
    - Defed out prior logic considering the Execution SCOPE of Codeblock under #ifdef CLASSY_SCOPE.

  * source/rtl/errorsys.prg
    ! Fixed default Error System to be more Clipper compatible.

2003-03-06 17:52 UTC-0300 Walter Negro <anegro@overnet.com.ar>
  * source/debug/debugger.prg